2009-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: FieldSig tests.

2009-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: StandAloneSig tests.

	* assembly-with-custommod.il: Added a calli

2009-05-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Methodref signature tests.

	* assembly-with-signatures.cs: File with vararg call.

	* Makefile: Add new dependency.

2009-05-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for parameters and generics

	* assembly-with-custommod.il: Added more methods to use
	in the tests.

2009-05-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: More signature tests.

	* assembly-with-custommod.il: File with custom mods.

	* Makefile: Add new dependency.

2009-05-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: More tests for method def signatures.

2009-05-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: New file for blob signature tests.

	* Makefile: Update for new test source.

2009-05-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Added blob.i to make it easier to locate signatures to
	mess around.

2009-05-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the generic param constraint table.

	* assembly-with-generics.cs: Add stuff for new tests.

2009-05-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the methodspec table.

	* assembly-with-generics.cs: Add stuff for new tests.

2009-05-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the generic param table.

	* assembly-with-generics.cs: New file for generic tests.

	* Makefile: Adjust the build to the new file.

2009-05-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Add tests for the nested class table.

	* assembly-with-complex-type.cs: Add a nested class.

2009-05-18 Rodrigo Kumpera  <rkumpera@novell.com>
